Kubernetes/HomeLab/middlewares.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: to-https
  namespace: homeserver
spec:
  redirectScheme:
    scheme: https
    permanent: true
